test/sematic/resources/positive/recursive_tydec4.tig
let 
    type namedArray = {name: string, value: arr}
    type arr = array of b
    type b = int
in
end