test/sematic/resources/negative/false_tydec2.tig
let 
    type a = array of b
    type b = array of a
in
end